--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,9 @@ body{
     margin: 0em;
     padding: 0;
 }
+.sales{
+    background-color:gray;
+    height: 10%;
+    width: 10%;
+    position: absolute;
+}
