--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,22 @@
-body{
-    margin: 0em;
-    padding: 0;
+:root{
+    --main-color:#94594b;
+    --bg:#121212;
 }
-.sales{
-    background-color:gray;
-    height: 10%;
-    width: 10%;
-    position: absolute;
+
+html{
+    font-size: 100%;
+    overflow-x: hidden;
+    scroll-padding-top: 9rem;
+    scroll-behavior: smooth;
+}
+
+body{
+    background: var(--bg);
+}
+
+.navbar{
+    background: var(--bg);
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem 7%;
 }
