added clean page switching

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
     --bg:#121212;
 }
 
-html{
+/* html{
     font-size: 100%;
     overflow-x: hidden;
     scroll-padding-top: 9rem;
@@ -19,4 +19,4 @@ html{
     align-items: center;
     justify-content: space-between;
     padding: 1.5rem 7%;
-}
+} */
