--- a/public/style.css
+++ b/public/style.css
@@ -20,3 +20,41 @@
     justify-content: space-between;
     padding: 1.5rem 7%;
 } */
+
+.brickBox {
+    background-color: #7b7b7b;
+    border: 1px solid #2b2b2b;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 400;
+    padding:1%;
+    text-align: left;
+    transform: translateY(0);
+    transition: transform 150ms, box-shadow 150ms;
+    touch-action: manipulation;
+}
+
+.brickBox:hover  {
+    box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+    transform: translateY(-2px);
+  }
+
+.buyButton {
+  background-color: #16c45f;
+  border: 1px solid #16c45f;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  padding:1%;
+  text-align: center;
+  transform: translateY(0);
+  transition: transform 150ms, box-shadow 150ms;
+  touch-action: manipulation;
+}
+
+.buyButton:hover  {
+  box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+  transform: translateY(-2px);
+}
