--- a/src/public/style.css
+++ b/src/public/style.css
@@ -19,6 +19,17 @@
   transition: all 200ms;
 }
 
+.Holder {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: space-around;
+  gap: 5vh;
+  position: absolute;
+  top: 10vh;
+}
+
 .Block {
   background-color: rgb(131, 0, 7);
   color: bisque;
