--- a/src/public/style.css
+++ b/src/public/style.css
@@ -32,18 +32,31 @@
 
 .Block {
   background-color: rgb(131, 0, 7);
-  color: bisque;
+  color: yellow;
   text-align: center;
-  border-color: bisque;
+  border-color: yellow;
   border-radius: 5px;
   border-style: solid;
   transition: all 200ms;
 }
 .Block:hover {
   transform: scale(110%);
-  border-color: #000;
+  border-color: rgb(227, 0, 11);
   background-color: rgb(227, 0, 11);
   transition: all 200ms;
+}
+
+.BasketBlock {
+  background-color: rgb(227, 0, 11);
+  color: yellow;
+  text-align: center;
+  border-color: yellow;
+  border-radius: 5px;
+  border-style: solid;
+  transition: all 200ms;
+}
+.BasketBlock:hover {
+  border-color: rgb(227, 0, 11);
 }
 
 #brickInfo{
@@ -72,3 +85,49 @@
 #buyButton:hover {
   background-color: rgb(5, 129, 5);
 }
+#removeButton {
+  background-color: yellow;
+  font-size: 20px;
+  border: none;
+  position: relative;
+  max-width: 35%;
+  max-height: 35%;
+  left: 65%;
+}
+#removeButton:hover {
+  background-color: rgb(184, 184, 0);
+}
+#brickPhoto {
+  height: 50px;
+  width: 50px;
+  order: 2;
+}
+
+#basketInfo #brickID,
+#basketInfo #brickPhoto,
+#basketInfo #brickName,
+#basketInfo #brickColour {
+  text-align: left;
+  min-height: 50px;
+  position: relative;
+  max-width: 50%;
+  order: 1;
+}
+
+#basketInfo #brickDesc, 
+#basketInfo #brickCount,
+#basketInfo #brickPrice {
+  text-align: left;
+  position: relative;
+  max-width: 50%;
+  min-height: 50px;
+  order: 3;
+}
+#basketInfo {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  column-gap: 25%;
+  max-height: 100%;
+}
+
