--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,7 +1,8 @@
 :root{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #282828;
-    font-size: 10px;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 #searchBar{
@@ -72,7 +73,6 @@
   background-color: rgb(172, 167, 167);
   color: yellow;
   border: none;
-  font-size: 110%;
   border-radius: 5px;
   text-align: center;
   transition: all 200ms;
@@ -89,7 +89,6 @@
   display: grid;
   grid-template-columns: [margin1] 2.5% [col1] 47.5% [col2] 47.5% [margin2] 2.5%;
   grid-template-rows: [margin1] 2.5% [row1] 10% [row2] 10% [row3] 10% [row4] 45% [row5] 20% [margin2] 2.5%;
-  font-size: 10px;
   min-height: 100%;
 }
 #brickInfo #brickID {
@@ -107,7 +106,6 @@
 
 #buyButton {
   background-color: lime;
-  font-size: 20px;
   border: none;
   transition: all 200ms;
   grid-column-start: col2;
@@ -119,7 +117,6 @@
 #brickInfo #remove {
   display: grid;
   background-color: yellow;
-  font-size: 20px;
   border: none;
   grid-template-columns: [col1] 50% [col2] 50%;
   grid-template-rows: [row1] 100%;
@@ -181,8 +178,9 @@
   grid-row: row2;
 }
 .BasketBlock #basketDesc {
+  overflow:hidden scroll;
   grid-column: col3;
-  grid-row: row1 / row2;
+  grid-row: row1 / row3;
 }
 .BasketBlock #basketColour {
   grid-column: col2;
@@ -203,6 +201,17 @@
 .BasketBlock #binButton:hover {
   background-color: rgb(114, 0, 0);
 }
+#completeButton {
+  position: absolute;
+  background-color: lime;
+  border: none;
+  border-radius: 5px;
+  transition: all 200ms;
+  left: 5%;
+  top: 14%;
+  height: 5%;
+}
+
 
 /* sets */
 
