--- a/src/public/style.css
+++ b/src/public/style.css
@@ -63,7 +63,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-content: space-around;
+  align-content: space-between;
   gap: 5vh;
   position: absolute;
   top: 20%;
@@ -78,28 +78,28 @@
   transition: all 200ms;
 }
 .Block:hover {
-  transform: scale(110%);
-  border-color: rgb(227, 0, 11);
+  border-color: darkslategrey !important;
   background-color: darkslategrey !important;
   transition: all 200ms;
 }
 
 /* elements inside the brick holders*/
-#brickInfo{
+#brickHolder{
+  height: 33vh;
+  width: 33vh;
   display: grid;
   grid-template-columns: [margin1] 2.5% [col1] 47.5% [col2] 47.5% [margin2] 2.5%;
   grid-template-rows: [margin1] 2.5% [row1] 10% [row2] 10% [row3] 10% [row4] 45% [row5] 20% [margin2] 2.5%;
-  min-height: 100%;
 }
-#brickInfo #brickID {
+#brickHolder #brickID {
   grid-row: row1;
   grid-column: col1;
 }
-#brickInfo #brickColour {
+#brickHolder #brickColour {
   grid-row: row2;
   grid-column: col1;
 }
-#brickInfo #brickName {
+#brickHolder #brickName {
   grid-row: row1;
   grid-column: col2;
 }
@@ -114,7 +114,7 @@
 #buyButton:hover {
   background-color: rgb(5, 129, 5);
 }
-#brickInfo #remove {
+#brickHolder #remove {
   display: grid;
   background-color: yellow;
   border: none;
@@ -123,14 +123,14 @@
   grid-column-start: col1;
   grid-row-start: row5;
 }
-#brickInfo #remove #binButton {
+#brickHolder #remove #binButton {
   grid-column-start: col1;
   height: 100%;
   width: 100%;
   transition: all 100ms;
   background-color: red;
 }
-#brickInfo #remove #binButton:hover {
+#brickHolder #remove #binButton:hover {
   background-color: rgb(114, 0, 0);
 }
 #basketAmount {
@@ -158,7 +158,8 @@
   grid-template-rows: [margin1] 5% [row1] 20% [row2] 20% [row3] 20% [row4] 20% [row5] 15% [margin2] 5%;
 }
 .BasketBlock:hover {
-  border-color: rgb(227, 0, 11);
+  border: solid darkslategrey !important;
+  height: 40vh !important;
 }
 .BasketBlock #remove {
   display: grid;
