--- a/src/public/style.css
+++ b/src/public/style.css
@@ -4,6 +4,10 @@
     font-size: 16px;
     font-weight: bold;
 }
+.expanded {
+  width: 40vh !important;
+  height: 40vh !important;
+}
 
 #searchBar{
   position: absolute;
@@ -16,7 +20,7 @@
 }
 .navbar {
   position: absolute;
-  width: 50%;
+  width: 90%;
   height: 4%;
   top: 7%;
   left: 5%;
@@ -213,11 +217,28 @@
   position: absolute;
   background-color: lime;
   border: none;
-  border-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   transition: all 200ms;
   left: 5%;
   top: 14%;
   height: 5%;
+  width: 5%
+} #completeButton:hover {
+  background-color: limegreen;
+}
+#totalCost {
+  background-color: limegreen;
+  border: none;
+  font: 20px ariel sans-serif;
+  text-align: center;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  position: absolute;
+  left: 10%;
+  top: 14%;
+  height: 5%;
+  width: 5%;
 }
 
 
