--- a/src/public/style.css
+++ b/src/public/style.css
@@ -220,6 +220,10 @@
   grid-column: col2;
   grid-row: row2;
 }
+#brickStocklevel {
+  grid-column: col2;
+  grid-row: row4;
+}
 
 
 
@@ -356,4 +360,8 @@
 }
 #setHolder #remove #binButton:hover {
   background-color: rgb(145, 0, 0);
+}
+#setStocklevel {
+  grid-column: col2;
+  grid-row: row4;
 }
