--- a/src/public/style.css
+++ b/src/public/style.css
@@ -9,6 +9,40 @@
   height: 40vh !important;
 }
 
+#login {
+  position: absolute;
+  left: 90vw;
+  width: 5vw;
+  top: 2vh;
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: lime;
+} 
+#login:hover {
+  background-color: rgb(0, 175, 0);
+}
+#logout {
+  position: absolute;
+  left: 85vw;
+  width: 5vw;
+  top: 2vh;
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background-color: lime;
+} 
+#logout:hover {
+  background-color: rgb(0, 175, 0);
+}
+#userInfo {
+  position: absolute;
+  left: 75vw;
+  width: 9vw;
+  top: 2vh;
+  color: bisque;
+}
+
 #searchBar{
   position: absolute;
   top: 15%;
